XML 9.4.25 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 9.4.25.

--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
@@ -239,6 +239,7 @@
   <string name="flight_seat_no">Istumapaikka %1$s</string>
   <string name="flight_state">Lennon tila</string>
   <string name="flight_time">Arvioitu saapuminen %1$s</string>
+  <string name="free_day_default_banner_title">Nauti lomastasi!</string>
   <string name="from_google_group_calendar">Google kalenteri</string>
   <string name="gadget_no_events">Ei tulevia kalenteritapahtumia</string>
   <string name="gadget_title">Kalenteri</string>
@@ -432,60 +433,16 @@ Tarkista verkkoyhteys ja yritä uudelleen."</string>
   <string name="setting_about_miui_version">MIUI versio:</string>
   <string name="setting_about_summary">Versio:</string>
   <string name="setting_accounts">Kalenterin tilit</string>
-  <string name="setting_content_promotion">内容推广</string>
   <string name="setting_features_title">Ominaisuuksien asetukset</string>
   <string name="setting_holiday_display_desc">Juhlapyhät näkyvät kotisivulla tapahtumien alapuolella</string>
   <string name="setting_holiday_reminder">Juhlapyhän muistutus</string>
   <string name="setting_others">Lisäasetukset</string>
-  <string name="setting_recommend">功能推荐</string>
-  <string name="setting_recommend_summary">首页订阅推荐入口</string>
-  <string name="setting_sms_import">导入短信事件</string>
   <string name="setting_title_about">Tietoa</string>
-  <string name="setting_title_debug">导出日志</string>
   <string name="setting_title_holiday_display">Näytä juhlapyhät</string>
-  <string name="setting_title_yiji_display">显示黄历宜忌</string>
-  <string name="setting_toast_dump_mylog_done">生成成功,您的日志在文件管理器\"手机/MIUI/debug_log/com.android.calendar/dump\"文件夹下</string>
-  <string name="setting_user_experience">用户体验计划</string>
   <string name="share_not_install_wechat">Asenna wechat.</string>
   <string name="share_not_install_weibo">Asenna weibo.</string>
   <string name="share_title">Jaa</string>
-  <string name="shift_card_edit_reminder">编辑提醒</string>
-  <string name="shift_card_reminder_day">本轮第%1$d天</string>
-  <string name="shift_card_set_reminder">点击设置倒班提醒</string>
-  <string name="shift_card_shift_type">今日倒班-%1$s</string>
-  <string name="shift_card_shift_type_not_start">%1$s开始倒班</string>
-  <string name="shift_detail_desc">本轮倒班周期为%1$d天，今日为本轮第%2$d天，开始日为：%3$s</string>
-  <string name="shift_detail_desc_label">倒班说明</string>
-  <string name="shift_detail_desc_not_start">每轮倒班周期为%1$d天，开始日为：%2$s</string>
-  <string name="shift_detail_label_after_tomorrow_not_work_day">后天倒班</string>
-  <string name="shift_detail_label_after_tomorrow_work_day">后天%1$s</string>
-  <string name="shift_detail_label_not_start">开始倒班</string>
-  <string name="shift_detail_label_today_not_work_day">今日倒班</string>
-  <string name="shift_detail_label_today_work_day">今日%1$s</string>
-  <string name="shift_detail_label_tomorrow_not_work_day">明天倒班</string>
-  <string name="shift_detail_label_tomorrow_work_day">明天%1$s</string>
-  <string name="shift_detail_time_not_start">未开始</string>
-  <string name="shift_interval_desc">每一轮%1$d天</string>
-  <string name="shift_interval_label">倒班周期</string>
-  <string name="shift_interval_picker_label">天</string>
-  <string name="shift_notification_text">%1$s | 本轮第%2$d天</string>
-  <string name="shift_notification_title">倒班提醒：%1$s%2$s</string>
-  <string name="shift_reminder_item_label">第%1$d天</string>
-  <string name="shift_reminder_switch_label">倒班提醒</string>
-  <string name="shift_reminders_label">每轮倒班提醒</string>
-  <string name="shift_rest_check_desc">当天休息（不提醒）</string>
-  <string name="shift_setting_label">倒班提醒设置</string>
-  <string name="shift_start_day_label">倒班开始日</string>
-  <string name="shift_type_morning">早班</string>
-  <string name="shift_type_night">夜班</string>
-  <string name="shift_type_noon">中班</string>
-  <string name="shift_type_rest">休息</string>
   <string name="show_day_view">Näytä päivä</string>
-  <string name="sms_import_description">更好地管理与时间相关的短信事件</string>
-  <string name="solar_lunar_convert_date"/>
-  <string name="solar_lunar_convert_description"/>
-  <string name="solar_lunar_convert_tab"/>
-  <string name="solar_to_lunar"/>
   <string name="start_date_calculate">Laske</string>
   <string name="subscribe_card">Tilaa nyt</string>
   <string name="subscribe_card_success">Tilattiin onnistuneesti! Tarkista tiedot kotisivulta.</string>
@@ -499,17 +456,9 @@ Voit myös lisätä muistutuksia, jotta et menetä mitään tärkeää."</string
   <string name="subscribe_channel_subscribing">Tilattu</string>
   <string name="subscribe_channel_title">Kanava</string>
   <string name="subscribing_card">Tilattu</string>
-  <string name="swipe_up_guide_hint_text">上滑发现更多</string>
-  <string name="taishen">胎神</string>
-  <string name="talk_back_month">月</string>
   <string name="talk_back_read_date">%1$s (%2$s kuukalenterin mukaan)</string>
   <string name="talk_back_setting">Asetukset</string>
   <string name="template_announce_item_index">Tapahtuma %1$s / %2$s.</string>
-  <string name="text_year">年</string>
-  <string name="ticket_card_date">%1$s月%2$s日</string>
-  <string name="ticket_card_description">今日可预定</string>
-  <string name="ticket_card_lunar">%1$s的火车票</string>
-  <string name="ticket_card_phase">- 第%1$s期</string>
   <string name="time_zone">Aikavyöhyke</string>
   <string name="timezone_label">Aikavyöhyke</string>
   <string name="today">Tänään</string>
@@ -563,13 +512,6 @@ Voit myös lisätä muistutuksia, jotta et menetä mitään tärkeää."</string
   <string name="travel_train_number_text">Juna</string>
   <string name="travel_train_station">Juna-asema</string>
   <string name="trip_card_flight_primary">%1$s航班  %2$s - %3$s</string>
-  <string name="trip_card_hotel_secondary">今日入住</string>
-  <string name="trip_card_movie_secondary">今日观看  |  %1$s</string>
-  <string name="trip_card_movie_secondary_no_cinema">今日观看</string>
-  <string name="trip_card_title">行程提醒</string>
-  <string name="trip_card_train_primary">%1$s车次  %2$s - %3$s</string>
-  <string name="trip_card_train_primary_no_arr">%1$s车次 %2$s出发</string>
-  <string name="trip_card_travel_secondary">%1$s 出发</string>
   <string name="unsubscribe_card">Poista tilaus</string>
   <string name="unsubscribe_card_success">“%1$s” tilaus poistettiin onnistuneesti</string>
   <string name="unsubscribing_card">Tilaus poistettu</string>
@@ -584,8 +526,6 @@ Voit myös lisätä muistutuksia, jotta et menetä mitään tärkeää."</string
   <string name="view_event_organizer_label">Järjestäjä:</string>
   <string name="view_event_response_label">Osallistutko?</string>
   <string name="view_in_month_view">Näytä kuukausi</string>
-  <string name="weather_card_humidity_desc">湿度%1$s%%</string>
-  <string name="weather_card_no_data_hint">点击获取天气数据</string>
   <string name="week_view_today_toast">Katselet tällä hetkellä tätä viikkoa</string>
   <string name="weekly">Viikottain (joka %s)</string>
   <string name="when_label">Milloin</string>
@@ -593,11 +533,8 @@ Voit myös lisätä muistutuksia, jotta et menetä mitään tärkeää."</string
   <string name="widget_get_weather_info">Hae säätiedot</string>
   <string name="widget_no_events">Ei tapahtumia</string>
   <string name="widget_select_style">Valitse tyyli</string>
-  <string name="work_day_default_banner_title">挣钱不止步，加班是出路！</string>
-  <string name="work_day_indication">: (</string>
-  <string name="wuxing">五行</string>
+  <string name="work_day_default_banner_title">Tuottavaa työpäivää!</string>
   <string name="xiaomi_calendar_display_name">Mi Tilin Kalenteri</string>
-  <string name="xingxiu">星宿</string>
   <string name="yearly">Vuosittain (%s)</string>
   <string name="yearly_plain">Vuosittain</string>
 </resources>
