--- a/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
@@ -60,7 +60,7 @@
   <string name="activate_email_notice">Muista aktivoida tilisi 24 tunnin kuluessa</string>
   <string name="activity_not_found_notice">Sovellusta ei löydy</string>
   <string name="add_account">Yhdistä tili</string>
-  <string name="agreement_and_privacy">Käyttöehdot ja Tietosuojakäytäntö</string>
+  <string name="agreement_and_privacy">Tietosuojakäytäntö ja Käyttöehdot</string>
   <string name="app_name">Mi Tili</string>
   <string name="auth_fail_warning">Istunto on vanhentunut, kirjaudu myöhemmin uudelleen</string>
   <string name="authorize_title">Valtuutus</string>
@@ -430,7 +430,7 @@ Aktivoi tilisi seuraamalla
   <string name="restart_phone_bind_message">Tekstiviestin saapumisessa saattaa kestää hetki. Aloitetaanko alusta tästä huolimatta?</string>
   <string name="restart_phone_bind_title">Vaihda palautuspuhelin</string>
   <string name="same_new_and_old_pwd">Ei voi olla sama, kuin nykyinen salasana</string>
-  <string name="scan_barcode">Skannaa QR-koodi</string>
+  <string name="scan_barcode">Skannaa QR-koodi kirjautuaksesi sisään</string>
   <string name="scan_barcode_title">Kirjaudu Mi Tilillesi skannaamalla QR-koodi</string>
   <string name="search_account_security">Tilin tietoturva</string>
   <string name="search_account_security_desc">Tilin Asetukset</string>
