--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -708,7 +708,7 @@ Ultralaajakulmatila tulee apuun, kun et voi liikkua kauemmaksi kohteestasi."</st
   <string name="ultra_wide_mode_use_hint_text_sat">"Kokeile 0.6X Ultralaajakulmatilaa sisältääksesi kuvaasi lisää näkymää.
 Ultralaajakulmatila tulee apuun, kun et voi liikkua kauemmaksi kohteestasi."</string>
   <string name="ultra_wide_open_tip">Ultralaajakulmatila</string>
-  <string name="ultra_wide_open_tip_sat">0.6X Ultralaajakulma</string>
+  <string name="ultra_wide_open_tip_sat">0.6X ultralaajakulma</string>
   <string name="ultra_wide_recommend_tip_hint">Kokeile Ultralaajakulmatilaa</string>
   <string name="user_agree">Hyväksy</string>
   <string name="user_agreement2">Palveluehdot</string>
