--- a/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
@@ -95,6 +95,8 @@ jotta voit katsoa niitä milloin tahansa"</string>
   <string name="do_not_ask">Älä kysy uudelleen</string>
   <string name="dont_import">Ei nyt</string>
   <string name="downloading_space">Ladataan…</string>
+  <string name="dual_animation">Käynnistysanimaatio</string>
+  <string name="dual_animation_description">Näytä animaatio kun kaksoissovellus käynnistetään</string>
   <string name="enable">Ota käyttöön</string>
   <string name="encrypt_space_delete_dialog_click_message">*Jos sinun ei tarvitse siirtää tietoja, %s</string>
   <string name="encrypt_space_delete_dialog_click_message_action">poista ja luo Toinen tila nyt.</string>
